<resources>
    <string name="app_name">Note4U</string>
    <string name="nameHint">Insert your e-mail here</string>
    <string name="pswdHint">Insert your password here</string>
    <string name="signup">Sign-up</string>
    <string name="login">Login</string>
    <string name="error">You must insert email and password before</string>
    <string name="failed">Authentication failed</string>
    <string name="signed">Welcome </string>
    <string name="logedIn">Welcome back </string>
    <string name="errorWeakPassword">Password should be at least 6 characters</string>
    <string name="errorInvalidEmail">Invalid email address</string>
    <string name="errorUserExists">The user already exists</string>
    <string name="errorWrongPassword">Wrong password</string>
    <string name="welcome">Welcome back </string>
    <string name="signing">Signing up</string>
    <string name="wait">Please wait...</string>
    <string name="anonymus">Enter without login</string>
    <string name="add">Add new note/ToDo List</string>
    <string name="added">added</string>
    <string name="errorAdd">Insert failed</string>
    <string name="exit">Logout</string>
    <string name="title">Insert title here</string>
    <string name="text">Insert text here</string>
    <string name="addNote">Add note</string>
    <string name="localizationOK">Permission Granted, Now you can access location data and camera.</string>
    <string name="localizationNO">Permission Denied, You cannot access location data and camera.</string>
    <string name="askPermission">You need to allow location permission</string>
    <string name="text2speech">Insert title with your voice</string>
    <string name="desc2speech">Insert description with your voice</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="removed">Note removed</string>
    <string name="notRemoved">Note NOT removed</string>
    <string name="dataError">You must insert all data</string>
    <string name="lat">Lat:</string>
    <string name="lng">Long:</string>
    <string name="modify">Modify</string>
    <string name="speak">Tell me what you want to write</string>
    <string name="connerror">Connection error</string>
</resources>
