<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:weightSum="100"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/titleAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="100"
            android:background="@drawable/custom_edittext"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:paddingStart="10dp" />


    </LinearLayout>

    <EditText
        android:id="@+id/textAdd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55"
        android:hint="@string/text"
        android:background="@drawable/custom_edittext"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="15"
        android:weightSum="100">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

        <Button
            android:backgroundTint="@android:color/holo_blue_bright"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:id="@+id/speech2text"
            android:layout_gravity="center"
            android:text="@string/text2speech"/>

        <Button
            android:id="@+id/desc2text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:text="@string/desc2speech"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_blue_bright"/>

    </LinearLayout>

    <Button
        android:id="@+id/okAdd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/addNote"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:backgroundTint="@android:color/holo_green_light"/>

</LinearLayout>