<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleShow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:textSize="28sp"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:textSize="18sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scrollbars = "vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100">

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/back"
            android:textSize="18sp"
            android:backgroundTint="@android:color/holo_green_light"
            android:gravity="center"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/delete"
            android:textSize="18sp"
            android:gravity="center"
            android:backgroundTint="@android:color/holo_red_light"/>

    </LinearLayout>

    <Button
        android:id="@+id/modify"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/modify"
        android:textSize="18sp"
        android:gravity="center"
        android:backgroundTint="@android:color/holo_orange_light"/>

</LinearLayout>